Switch to Spring-compatible version of PF4J

--- a/bloom-fx/src/main/resources/com/f1uctus/bloom/application/controllers/workflows/WorkflowsController.fxml
+++ b/bloom-fx/src/main/resources/com/f1uctus/bloom/application/controllers/workflows/WorkflowsController.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox minHeight="400.0" minWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.f1uctus.bloom.application.controllers.workflows.WorkflowsController">
+      fx:controller="com.f1uctus.bloom.application.controllers.workflows.WorkflowsController"
+      stylesheets="@workflow.css">
     <HBox spacing="5.0">
-        <Button mnemonicParsing="false" text="Save" onAction="#onSaveAction"/>
-        <Button mnemonicParsing="false" text="Add" onAction="#onAddAction"/>
-        <Button mnemonicParsing="false" text="Remove" onAction="#onRemoveAction"/>
+        <Button mnemonicParsing="false" onAction="#onSaveAction" prefWidth="75.0" text="Save"/>
+        <Button mnemonicParsing="false" onAction="#onAddAction" prefWidth="75.0" text="Add"/>
+        <Button mnemonicParsing="false" onAction="#onRemoveAction" prefWidth="75.0" text="Remove"/>
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
     </HBox>
     <TreeView fx:id="tree" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
 </VBox>
